CHANGELOG for smartmontools

$Id: CHANGELOG,v 1.45 2002/11/13 10:04:12 ballen4705 Exp $

Copyright (C) 2002 Bruce Allen <smartmontools-support@lists.sourceforge.net>

Home page of code is: http://smartmontools.sourceforge.net

This program is free software; you can redistribute it and/or modify it
under the terms of the GNU General Public License as published by the Free
Software Foundation; either version 2, or (at your option) any later
version.

You should have received a copy of the GNU General Public License (for
example COPYING); if not, write to the Free Software Foundation, Inc., 675
Mass Ave, Cambridge, MA 02139, USA.

This code was originally developed as a Senior Thesis by Michael Cornwell
at the Concurrent Systems Laboratory (now part of the Storage Systems
Research Center), Jack Baskin School of Engineering, University of
California, Santa Cruz. http://ssrc.soe.ucsc.edu/


NOTES FOR FUTURE RELEASES: see TODO file.

CURRENT RELEASE (see VERSION file in this directory):

  Modified SCSI device check to also send warning emails if
  requested in directives file.

  Added a new smartd configuration file Directive: -M ADDRESS.
  This sends a single warning email to ADDRESS for failures or
  errors detected with the -c, -L, -l, or -f Directives.

smartmontools-5.0.38

  Modified perror() statements in atacmds.c so that printout for SMART
  commands errors is properly suppressed or queued depending upon users
  choices for error reporting modes.

  Added Italian descriptions to smartmontools.spec file.

  Started impementing send-mail-on-error for smartd; not yet enabled.

  Added -P (Permissive) Directive to smartd.conf file to allow SMART
  monitoring of pre-ATA-3 Rev 4 disks that have SMART but do not have
  a SMART capability bit.
 
  Removed charset encodings from smartmontools.spec file for non-English
  fields.

smartmontools-5.0.32

  Added manual page smartd.conf.5 for configuration file.

  smartctl: Missing ANSI prototype in failuretest(); fixed.
